env/code_53ebcecd4cefd/stderr.txt
  File "main.py", line 3
    print(podzielna_przez_trzy)
        ^
IndentationError: expected an indented block
